src-ken&y/objects/Financial_Report_Section__c.object
<CustomObject>
    <customHelpPage>Help_Financial_Reports</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Financial_Report__r.Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Section_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display or hide this section name on the final Financial Report</description>
        <label>Display Section Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Report__c</fullName>
        <label>Financial Report</label>
        <referenceTo>Financial_Report__c</referenceTo>
        <relationshipLabel>Report Sections</relationshipLabel>
        <relationshipName>Financial_Report_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Font_Size__c</fullName>
        <inlineHelpText>Calculated section can have normal font size, or large for for emphasis</inlineHelpText>
        <label>Font Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <inlineHelpText>Only for Calculated section types</inlineHelpText>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grouping_Section_Footer_Sum_Name__c</fullName>
        <inlineHelpText>Grouping Section Footer Sum Name</inlineHelpText>
        <label>Grouping Section Footer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Label__c</fullName>
        <label>Key Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Data_Batch__c</fullName>
        <label>Last Data Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Scale__c</fullName>
        <formula>Financial_Report__r.Numeric_Scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order this section appears in the output report</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Financial_Report_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Financial Report Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Report_Section__c.Financial_Report__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Report__c</valueField>
            </filterItems>
            <filterItems>
                <field>Financial_Report_Section__c.Section_Type__c</field>
                <operation>equals</operation>
                <value>Grouping</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Report_Section__c</referenceTo>
        <relationshipLabel>Financial Report Sections</relationshipLabel>
        <relationshipName>Financial_Report_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <formula>Financial_Report__r.Period_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schema__c</fullName>
        <label>Schema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Data_Status__c</fullName>
        <label>Section Data Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Type__c</fullName>
        <inlineHelpText>Data = Queried from a report
Grouping = Container to group other sections in
Calculated = Calculates values from 1 or more Data sections</inlineHelpText>
        <label>Section Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Grouping</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Net Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Grouping_Section_Footer_Sum__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Grouping Section Sum</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Report Section</label>
    <nameField>
        <label>Report Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Footer_Name_on_Grouping_Sections</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Section_Type__c, &quot;Grouping&quot;)
&amp;&amp;
ISBLANK(Grouping_Section_Footer_Sum_Name__c)
&amp;&amp;
Show_Grouping_Section_Footer_Sum__c</errorConditionFormula>
        <errorDisplayField>Grouping_Section_Footer_Sum_Name__c</errorDisplayField>
        <errorMessage>Grouping sections must have a Footer Sum Name when &quot;Show Grouping Footer&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Formula_on_Calculated_Sections</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Section_Type__c, &quot;Calculated&quot;)
&amp;&amp;
ISBLANK(Formula__c)</errorConditionFormula>
        <errorDisplayField>Formula__c</errorDisplayField>
        <errorMessage>Formula is required for Calculated sections</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Section_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Section_Type__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Section_Type__c</errorDisplayField>
        <errorMessage>Section Type is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_font_size_on_calculated_sections</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Section_Type__c, &quot;Calculated&quot;)
&amp;&amp;
ISPICKVAL(Font_Size__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Font_Size__c</errorDisplayField>
        <errorMessage>Must specify font size for Calculated sections</errorMessage>
    </validationRules>
</CustomObject>